feat: Добавил роуты отправки изображения и главный роут

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,30 @@
+aescipher==6.0.0
+blinker==1.9.0
+cffi==2.0.0
+chardet==5.2.0
+click==8.3.1
+cryptography==46.0.3
+easyrsa==3.1.0
+encryptedsocket==3.0.0
+Flask==3.1.2
+flask-cors==6.0.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+munch==4.0.0
+omnitools==0.0.268
 pillow==12.1.0
+psycopg2==2.9.11
+pyasynchat==1.0.5
+pyasyncore==1.0.5
+pycparser==2.23
+pycryptodome==3.23.0
+pyftpdlib==2.1.0
+pyOpenSSL==25.3.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pythoncgi==0.17.0
+six==1.17.0
+threadwrapper==0.14.0
+unencryptedsocket==2.2.0
+Werkzeug==3.1.5
